--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -1,1 +1,83 @@
 @import 'variables';
+
+main {
+    &>section {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-content: center;
+
+        &.presentation {
+            height: 80vh;
+
+            blockquote {
+                @extend %coursiveFontRegular;
+                font-size: 40px;
+                color: $offColor;
+                padding: 10px;
+            }
+
+            p {
+                text-align: right;
+            }
+        }
+
+        &.bio {
+            div.bio-card {
+                background-color: $cardColor;
+                border: 1px solid $mainColor;
+                border-radius: 0 25px;
+                margin: 20px auto;
+                padding: 10px;
+
+                h2 {
+                    margin-bottom: 10px;
+                }
+            }
+        }
+
+        &.contacts {
+            margin-top: 30px;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+
+            h2 {
+                width: 100%;
+                text-align: center;
+                margin-bottom: 10px;
+            }
+
+            div.form-container {
+                flex: 50%;
+
+                form.contatti {
+                    @extend %form;
+
+                    div#privacy-box {
+                        margin-top: 3px;
+                        margin-bottom: 8px;
+                        padding: 5px;
+                    }
+
+                }
+
+                div.result-message {
+                    h2 {
+                        margin-bottom: 20px;
+                    }
+                }
+            }
+
+            section.contacts-message {
+                flex: 50%;
+                padding: 30px;
+
+                div.message p {
+                    @extend %coursiveFontRegular;
+                    font-size: 24px;
+                }
+            }
+        }
+    }
+}
