--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,234 @@
 @import 'variables';
+
+// Posizionamento per bloccare footer al bottom
+html {
+    width: 100%;
+    height: 100%;
+}
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+// Text style 
+p,
+a,
+label {
+    @extend %text;
+}
+
+a:hover {
+    background-color: $hoverBgColor;
+    color: $hoverTxtColor;
+}
+
+@for $i from 1 through 6 {
+    h#{$i} {
+        @extend %titleFont;
+        color: $mainColor;
+    }
+}
+
+// Other parts styles
+span.stars {
+    color: goldenrod;
+}
+
+body {
+    background-color: $cardColor;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+
+    // Per bloccare footer al bottom
+    height: 100%;
+    min-height: 100%;
+
+    div.page-container {
+        @extend %pageContainer;
+        margin: auto;
+        padding: 30px 30px 0 30px;
+
+        // Per bloccare footer al bottom
+        min-height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+
+        // Header
+        header {
+            padding: 20px;
+            flex-shrink: 0;
+
+            div.logo {
+                height: 150px;
+                margin: auto;
+
+                img {
+                    display: block;
+                    height: 100%;
+                    margin: auto;
+                }
+            }
+        }
+
+        // Menu
+        nav {
+            flex-shrink: 0;
+
+            div.hamburger-menu {
+                position: fixed;
+                top: 0;
+                right: 0;
+                z-index: 1;
+
+                display: flex;
+                flex-direction: column;
+
+                input#controllo {
+                    opacity: 0;
+                }
+
+                // Hamburger icon
+                label.label-controllo {
+                    position: absolute;
+                    top: 20px;
+                    right: 20px;
+                    width: 50px;
+                    height: 50px;
+                    padding: 10px;
+                    cursor: pointer;
+                    z-index: 2;
+                    background-color: $offColor;
+                    border-radius: 50%;
+
+                    &>span,
+                    &>span::after,
+                    &>span::before {
+                        position: absolute;
+                        top: 25px;
+                        width: 30px;
+                        height: 3px;
+                        background-color: $mainColor;
+                        border-radius: 2px;
+                        transition: .25s ease-in-out;
+                    }
+
+                    &>span::before {
+                        content: "";
+                        top: -10px;
+                    }
+
+                    &>span::after {
+                        content: "";
+                        top: 10px;
+                    }
+                }
+
+                // Hidden menu
+                ul.menu {
+                    @extend %menu;
+                    position: fixed;
+                    right: -250px;
+                    width: 200px;
+                    padding: 100px 0;
+                    height: 100%;
+                    background-color: $cardColor;
+                    box-shadow: -5px -5px 30px $shadowColor;
+                    z-index: 1;
+                    transition: .25s ease-in-out;
+
+                    li {
+                        width: 100%;
+                        display: block;
+                        text-align: right;
+                        margin: 20px 0;
+                        padding: 0 20px;
+
+                        a {
+                            display: inline-block;
+                            width: 100%;
+                            font-size: 16px;
+                            text-transform: uppercase;
+
+                            &::first-letter {
+                                font-size: 20px;
+                                color: $mainColor;
+                            }
+                        }
+
+                        &:hover {
+                            background-color: $hoverBgColor;
+                            color: $hoverTxtColor;
+                        }
+                    }
+                }
+
+                // Hamburger toggle transition
+                input#controllo:checked {
+                    &~ul.menu {
+                        right: 0;
+                    }
+
+                    &~label.label-controllo {
+                        &>span {
+                            transform: rotate(45deg);
+
+                            &::before {
+                                top: 0;
+                                transform: rotate(0deg);
+                            }
+
+                            &::after {
+                                top: 0;
+                                transform: rotate(90deg);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        // Main (per mantenere il footer allineato al bottom)
+        main {
+            flex: 1 0;
+        }
+
+
+        // Footer
+        footer {
+            flex-shrink: 0;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-evenly;
+
+            margin-top: 20px;
+            padding: 20px;
+
+            border-top: 1px solid $offColor;
+
+            h3 {
+                margin-bottom: 5px;
+            }
+
+            div.left-col {}
+
+            div.center-col {
+                ul.menu {
+                    @extend %menu;
+                }
+            }
+
+            div.rigth-col {
+                display: flex;
+                flex-direction: column;
+
+                a {
+                    display: block;
+                }
+            }
+        }
+    }
+}
